# bindgen_cuda

./: .gitignore  flake.nix
examples/simple/: Cargo.toml  build.rs
examples/simple/src/: lib.rs
examples/simple_ptx/: build.rs
examples/simple_ptx/src/: cuda.cu  lib.rs
examples/simple_static/: Cargo.toml  build.rs
examples/simple_static/src/: cuda.cu  lib.rs
src/: lib.rs
